--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
