Fix ui of social links

--- a/data/links.yml
+++ b/data/links.yml
@@ -1,3 +1,2 @@
-facebook: TODO
-instagram: TODO
-pinterest: TODO
+facebook: https://www.facebook.com/pages/category/Hair-Salon/Mikael-Asselyn-Coiffeur-Coloriste-236211836419519/
+instagram: https://www.instagram.com/mikaelasselyn/
