Create legals page

--- a/data/contact.yml
+++ b/data/contact.yml
@@ -1,3 +1,5 @@
+name: Mikael Asselyn - Coiffeur / Coloriste
 address: 18 rue d'Estrées 75007 Paris
 phone: 01.45.51.79.19
 email: mikaelasselyn@gmail.com
+siret: 53269121900010
