Add pages color and care

--- a/data/contact.yml
+++ b/data/contact.yml
@@ -1,5 +1,8 @@
 name: Mikael Asselyn - Coiffeur / Coloriste
 address: 18 rue d'Estrées 75007 Paris
 phone: 01.45.51.79.19
+subway_1: École Militaire (L8)
+subway_2: Ségur (L10)
+subway_3: Saint François Xavier (L13)
 email: mikaelasselyn@gmail.com
 siret: 53269121900010
