Update with owner feedbacks

--- a/data/contact.yml
+++ b/data/contact.yml
@@ -4,5 +4,7 @@ phone: 01.45.51.79.19
 subway_1: École Militaire (L8)
 subway_2: Ségur (L10)
 subway_3: Saint François Xavier (L13)
+bus_1: 87 Breteuil
+bus_2: 28 El Salvador
 email: mikaelasselyn@gmail.com
 siret: 53269121900010
